[project]
name = "model-analysis-toolkit"
version = "0.1.0"
description = "placeholder"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scienceplots>=2.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
